<resources>

    <string name="google_maps_key" translatable="false" templateMergeStrategy="preserve">
        AIzaSyAtG9S26jXBIUo1TexUpavxx6oEZNOjJP8
    </string>

    <string name="app_name">MoveForLess</string>
    <string name="empty_message">empty</string>
    <string name="refresh_button_text">refresh</string>
    <string name="error_message">error</string>

    <!--dialog messages-->
    <string name="loading">Loading...</string>
    <string name="login_loading">Log in...</string>
    <string name="logout_loading">Log out...</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="clear">Clear</string>
    <string name="close">Close</string>
    <string name="cancel">Cancel</string>
    <string name="ok">Ok</string>
    <string name="back__pressed_confirm_message">Do you really want go to the home screen?</string>
    <string name="payment_error">Entered amount is not enough. Please pay the required amount</string>
    <string name="connection_error">Server is now responding. Do you want to continue in offline mode?</string>
    <string name="check_error">Please, add photo of check</string>

    <!--Login-->
    <string name="email">E-mail</string>
    <string name="password">Password</string>
    <string name="login">Log in</string>

    <!--menu items-->
    <string name="menu_settings">Settings</string>
    <string name="menu_logout">Log out</string>
    <string name="menu_search">Search contracts</string>
    <string name="menu_refresh">Refresh contracts</string>
    <string name="menu_navigation">Open navigation</string>
    <string name="next">Next</string>

    <string name="questionnaire">Questionnaire</string>
    <string name="payments">Payments</string>

    <!--job details screen-->
    <string name="show_route">Show Route</string>
    <string name="save">Save</string>
    <string name="start_job">Start Job</string>

    <!--feedback screen-->
    <string name="review">Review</string>
    <string name="claim">Claim</string>
    <string name="rate">Rate our service</string>
    <string name="write_feedback">Write a feedback</string>
    <string name="write_claim">Write a claim</string>
    <string name="open_claim">Open a Claim</string>
    <string name="send">Send</string>
    <string name="add">Add</string>

    <string name="send_feedback_successfull">Feedback has been sent successfully</string>
    <string name="send_claim_successfull">Claim has been sent successfully</string>

    <!--payment screen-->
    <string name="total">Total:</string>
    <string name="proceed">Proceed</string>
    <string name="choose_payment_type">Choose payment type</string>
    <string name="amount_error_message">Please, enter amount</string>
    <string name="pay">Pay</string>
    <string name="check_payment">Check Payment</string>
    <string name="amount">amount</string>

    <!--contract screen-->
    <string name="sign">Sign</string>
    <string name="contract">Contract</string>
    <string name="invoice">Invoice</string>

    <!--congratulation screen-->
    <string name="back_to_schedule">Back to Schedule</string>
    <string name="write_review">Write Review</string>
    <string name="congratulation_text">Congratulation! \n Your feedback \n has been sent</string>
    <string name="invoice_successfull">Congratulation! \n Your invoice \n has been paid successfully</string>

    <!--dialogs-->
    <string name="signature_title">Online Signature</string>
    <string name="signature_description">Please Sign Below:</string>
    <string name="distance">Distance: </string>
    <string name="duration">Duration: </string>


    <!--schedule screen-->
    <string name="action_search">Search</string>
    <string name="move_for_less">Move For Less</string>
    <string name="company_requisites">17854 NE 5 Ave Miami, FL 33162\nPhone: 305-791-7997 Fax: 305 514 0596\nLicense #: US DOT 1717780 MC 629981</string>
    <string name="job_number">Job ID: LO025330</string>
    <string name="client_requisites">QUOTE\nMario Martinez\nPhone: 305-791-7997\nFax: 305 514 0596\nEmail:
        mario.martinez@moveforless.biz</string>
    <string name="attention">SHIPPER IS REQUESTED TO READ THIS DOCUMENT BEFORE SIGNING ASK FOR AN EXPLANATION OF ANYTHING NOT CLEAR OR INCONSISTENT WITH ANY PREVIOUS REPRESENTATION. THIS WILL CONFIRM INSTRUCTIONS AND AUTHORIZE YOU TO MOVE, SHIP, PACK, STORE, AND / OR PERFORM THE SERVICE HEREON</string>
    <string name="please_read_carefully">THE TOTAL COST IS BASED ON AN HOURLY RATE ONLY. SHOULD THERE BE ANY OTHER SERVICES REQUESTED, ADDITIONAL COSTS WILL BE CHARGED. TRAVEL TIME FROM PICKUP TO DELIVERY POINTS WILL BE ADDED AS BILLABLE LABORS HOURS.TRAVEL TIME FROM OFFICE WILL NOT BE CHARGED UNLESS IS SPECIFIED IN YOUR QUOTE ABOVE. THE PRICE INCLUDES LOADING / UNLOADING, ASSEMBLY / DISASSEMBLY, TAX, LABOR, FUEL, INSURANCE AND MOVING BLANKETS TO PROTECT NON-FRAGILE ITEMS. INSURANCE COVERAGE REQUIRES COMPLETE AND COMPREHENSIVE PACKING OF ALL VALUED ITEMS. ASSIGNED SHIPPING ITEMS THAT ARE NOT PROTECTED, SECURED, AND / OR PACKED WILL BE SERVICE PACKED AT THE CUSTOMER IS
        EXPENSE. SERVICE PACKING OF ITEMS WILL BE AT THE MOVER IS DISCRETION. CUSTOMER MAY RESTRICT ANY COMPANY SERVICE PACKING, BY WAIVER FORM, PRIOR TO THE COMMENCEMENT OF THE OPERATION. WAIVERS, BY DEFAULT, WILL PRECLUDE COMPLETE INSURANCE AND/OR PACKED WILL BE SERVICE PACKED AT THE CUSTOMER IS EXPENSE. SERVICE PACKING OF ITEMS WILL BE AT THE MOVER IS DISCRETION. CUSTOMER MAY RESTRICT ANY COMPANY SERVICE PACKING, BY WAIVER FORM, PRIOR TO 711E COMMENCEMENT OF THE OPERATION. WAIVERS, BY DEFAULT, WILL PRECLUDE COMPLETE INSURANCE COVERAGE OF STATED WAIVED ITEM(S), AND RENDERS MOVE FOR LESS NON-LIABLE FOR ANY DAMAGE THAT MAY OCCUR DURING TRANSPORT. PACKING SUPPLIES SUCH AS, AND NOT LIMITED TO, BUBBLE WRAP, TAPE, PLASTIC WRAP, BOXES (INCLUDING T.V. BOX) ETC. ARE NOT INCLUDED IN THE PRICE. FOR CUSTOMER SERVICE ASSISTANCE WITH PICKUP OR DELIVERY SCHEDULES, BILLING OR OTHER CUSTOMER SERVICE MATTERS, PLEASE CALL (888) 668-3712. WE ARE NOT RESPONSIBLE FOR CANCELLATIONS DUE TO CIRCUMSTANCES BEYOND OUR CONTROL. WE CAN BEAT ANY QUOTE OUT THERE. WE HAVE BEEN IN BUSINESS FOR OVER 10 YEARS, FULLY INSURED AND BONDED. WE ARE AN AUTHORIZED MOVING COMPANY WITH MOVINGINSURANCE.COM.</string>
    <string name="title_activity_google_play_services">GooglePlayServicesActivity</string>
    <string name="cant_create_photo">Can not  create photo</string>
    <string name="not_found_camera">Do not found camera</string>
    <string name="file_is_not_found">File not found</string>
    <string name="uncompilable_type">Uncompatible type</string>

    <!--setting fragment-->
    <string name="change_password">Change password</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="change">Change</string>
    <string name="enable_notification">Enable notification</string>

    <string name="edit_user_success">User has changed successfully</string>
    <string name="edit_user_error">User has not changed. Please, try later</string>
</resources>

