<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_settings"
        android:title="@string/menu_settings"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_logout"
        android:title="@string/menu_logout"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_dummy_signature_dialog"
        android:title="signature dialog"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_dummy_google_maps"
        android:title="google maps"
        app:showAsAction="never" />

    <!--<item android:id="@+id/action_search"-->
          <!--android:title="@string/action_search"-->
          <!--app:actionViewClass="android.support.v7.widget.SearchView"-->
          <!--app:showAsAction="always"/>-->

    <item
        android:id="@+id/menu_navigation"
        android:title="@string/menu_navigation"
        android:icon="@drawable/icn_route"
        app:showAsAction="always" />


    <item
        android:id="@+id/menu_refresh"
        android:title="@string/menu_refresh"
        android:icon="@drawable/icn_refresh"
        app:showAsAction="always" />


</menu>