<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/job_details_background"
    android:orientation="vertical"
    android:fillViewport="true"
    android:paddingBottom="@dimen/job_content_padding_bottom">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:paddingLeft="@dimen/job_content_padding_left_right"
        android:paddingRight="@dimen/job_content_padding_left_right"
        android:orientation="vertical">

        <TextView
            style="@style/PagesTitleStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/claim" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/form_borders"
            android:layout_weight="1">

            <com.miami.moveforless.customviews.Helvetica.HelveticaEditText
                android:id="@+id/etClaim_FC"
                style="@style/ReviewEditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:minHeight="150dp"
                android:gravity="top|left"
                android:hint="@string/write_claim"
                android:inputType="textMultiLine"
                android:background="@android:color/transparent"
                android:paddingTop="5dp"
                android:minLines="4"
                android:singleLine="false" />

        </FrameLayout>

        <com.miami.moveforless.customviews.PhotoLayout.PhotoLayout
            android:id="@+id/photos_container_FF"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:columnCount="6"
            >
        </com.miami.moveforless.customviews.PhotoLayout.PhotoLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right|bottom"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="10dp"
            android:gravity="center_vertical"
            >

            <com.miami.moveforless.customviews.Helvetica.HelveticaButton
                android:id="@+id/btnAdd_FC"
                style="@style/BaseButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="45dp"
                android:layout_marginRight="30dp"
                android:text="@string/add"
                />

            <com.miami.moveforless.customviews.Helvetica.HelveticaButton
                android:id="@+id/btnSend_FC"
                style="@style/BaseButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="45dp"
                android:text="@string/send"
                />

        </LinearLayout>

    </LinearLayout>


</ScrollView>
